--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.h2.console.settings.web-allow-others=false
 
 spring.thymeleaf.suffix=.html
 
-server.port=${LEANCLOUD_APP_PORT}
+server.port=80
 
 UA=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36
